# Logging

./: CMakeLists.txt  ReadMe.md
include/Logging/: Colors.h  Enumerators.h  Log.h  OutputStreamLogger.hpp  Severity.h  iLog.h  iLogger.h
src/: Log.cpp  temp.cpp
